# Simulation_Room

./: .gitignore  README.md  docker-compose.yml  project_build_spec.md  pyproject.toml
.playwright-mcp/: page-2026-07-17T14-39-49-809Z.yml  page-2026-07-17T14-41-10-383Z.yml  page-2026-07-17T14-41-22-893Z.yml  page-2026-07-17T15-16-57-863Z.yml  page-2026-07-17T15-18-13-689Z.yml  page-2026-07-17T15-18-49-597Z.yml  page-2026-07-17T15-18-58-512Z.yml  page-2026-07-17T15-19-04-443Z.yml  page-2026-07-17T15-25-28-093Z.yml  page-2026-07-17T15-26-19-657Z.yml  page-2026-07-17T15-26-54-180Z.yml  page-2026-07-17T15-26-56-304Z.yml  page-2026-07-17T15-27-16-919Z.yml  page-2026-07-17T15-27-19-044Z.yml  page-2026-07-17T15-28-14-823Z.yml  page-2026-07-17T15-28-16-870Z.yml  page-2026-07-17T15-28-24-795Z.yml  page-2026-07-17T15-28-30-793Z.yml  page-2026-07-17T15-28-33-819Z.yml  page-2026-07-17T15-28-54-366Z.yml  page-2026-07-17T15-28-56-408Z.yml  page-2026-07-17T15-29-21-243Z.yml  page-2026-07-17T15-29-23-291Z.yml  page-2026-07-17T15-30-03-892Z.yml  page-2026-07-17T15-30-05-935Z.yml  page-2026-07-17T15-30-34-012Z.yml  page-2026-07-17T15-30-36-060Z.yml  page-2026-07-17T15-30-56-775Z.yml  page-2026-07-17T15-30-58-815Z.yml  page-2026-07-17T15-31-34-604Z.yml  page-2026-07-17T15-31-36-656Z.yml
dashboard/: app.py  requirements.txt
docs/: architecture.md
report/: Digital_Twin_Project1_Report.pptx  demo_script.md  demo_script_vi.md
report/video-demo/: BRIEF.md  frame.md  gen_narration.sh  (+3 more)
room3d/: room3d.html
simulator/: physics.py  pid_controller.py  publisher.py  requirements.txt
(+5 files in other folders)
